# mailgui

./: README.md  config.json  mailgui.py  msgtool_client.py  pyproject.toml
.github/workflows/: build-exe.yml
mailgui_pkg/: __init__.py  __main__.py
tests/: conftest.py  test_crypto.py  test_mail_cache.py  test_msgtool_client.py
