[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mailgui"
version = "1.0.0"
description = "Hurricane Software Desktop Mail Client (SMTP/IMAP)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Sonia", email = "sonia@hurricanesoft.com.tw"}]

[project.scripts]
mailgui = "mailgui:main"

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]
